<resources>
    <string name="app_name">Assignment</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="view_product">VIEW PRODUCT</string>
    <string name="logout">LOGOUT</string>
    <string name="category_name">Category Name</string>
    <string name="add">ADD</string>
    <string name="add_category">ADD CATEGORY</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="product_name">Product Name</string>
    <string name="product_code">Product Code</string>
    <string name="select_image">Select Image</string>
    <string name="products">PRODUCTS</string>
</resources>