<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf0f3"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/addCatCard"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:neumorph_backgroundColor="#ecf0f3"
            app:neumorph_inset="12dp"
            app:neumorph_lightSource="leftBottom"
            app:neumorph_shadowColorDark="@color/white"
            app:neumorph_shadowColorLight="@color/white"
            app:neumorph_shadowElevation="5dp"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
            app:neumorph_shapeType="pressed">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/addCat"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:padding="30dp"
                    android:src="@drawable/category_add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addCat"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/add_category"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/addProductCard"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/addCatCard"
            app:neumorph_backgroundColor="#ecf0f3"
            app:neumorph_inset="12dp"
            app:neumorph_lightSource="leftBottom"
            app:neumorph_shadowColorDark="@color/white"
            app:neumorph_shadowColorLight="@color/white"
            app:neumorph_shadowElevation="5dp"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
            app:neumorph_shapeType="pressed">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/addProduct"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:padding="20dp"
                    android:src="@drawable/product" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/addProduct"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:text="@string/add_product"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>
        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/view_productCard"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_below="@id/addCatCard"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:neumorph_backgroundColor="#ecf0f3"
            app:neumorph_inset="12dp"
            app:neumorph_lightSource="leftBottom"
            app:neumorph_shadowColorDark="@color/white"
            app:neumorph_shadowColorLight="@color/white"
            app:neumorph_shadowElevation="5dp"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
            app:neumorph_shapeType="pressed">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/view_product"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:padding="20dp"
                    android:src="@drawable/view_product" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/view_product"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/view_product"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>

        </soup.neumorphism.NeumorphCardView>


        <soup.neumorphism.NeumorphCardView
            android:id="@+id/logoutCard"
            style="@style/Widget.Neumorph.CardView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_below="@id/addProductCard"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/addCatCard"
            app:neumorph_backgroundColor="#ecf0f3"
            app:neumorph_inset="12dp"
            app:neumorph_lightSource="leftBottom"
            app:neumorph_shadowColorDark="@color/white"
            app:neumorph_shadowColorLight="@color/white"
            app:neumorph_shadowElevation="5dp"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
            app:neumorph_shapeType="pressed">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/logout"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:padding="30dp"
                    android:src="@drawable/logout" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </RelativeLayout>

        </soup.neumorphism.NeumorphCardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>